[tool.poetry]
name = "generator-nft-metadata"
version = "0.1.0"
description = ""
authors = ["Wincenty Lech <wincenty.lech@mercadolivre.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
